# gitkit

./: .gitignore  HANDOFF.md  README.md  RELEASE.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  git.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.tauri/: gitkit-updater.key.pub
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: git.rs  lib.rs  main.rs
src/styles/: index.css  theme.css
